--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,7 +6,8 @@
 
 #root {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App {
@@ -19,4 +20,32 @@
   padding: 15px;
   border: 2px solid green;
   margin-top: 15px;
+}
+
+.page__wrapper {
+  margin-top: 30px;
+  display: flex;
+}
+
+.page {
+  padding: 10px;
+  border: 1px solid teal;
+  cursor: pointer;
+}
+
+.page__current {
+  border: 2px solid black;
+  font-weight: 500;
+}
+.navbar {
+  height: 50px;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+  background-color: lightgreen;
+}
+
+.navbar__links {
+  margin-left: auto;
 }
